# clipfarm

./: .gitignore  CLAUDE.md  COMPLETED_PHASES.md  KICKOFF_MESSAGES.md  NATIVE_REWRITE_DECISIONS.md  NATIVE_REWRITE_PLAN.md  PHASES.md  PREBUILD_REVIEW_FINDINGS.md  PRODUCT_SESSION_2026-07-11.md  QUESTIONS.md  README.md  REVIEW_PROMPT.md  clipfarm-spec.md  pyproject.toml
.claude/: settings.json
.obsidian/: workspace.json
clipfarm/: __init__.py  app.py  attempt_naming.py  attempts_ops.py  boundary.py  brief.py  continuity.py  ffprobe.py  ingest.py  llm.py  llm_anthropic.py  models.py  premade.py  projects.py  propagation.py  resolver.py  search.py  segmentation.py  settings.py  store.py  strategies.py  tagging.py  take_grid.py  transcripts.py  watcher.py
mac/: CLAUDE.md
scripts/: fix_on_script_null_line.py  gen_segmentation_golden.py  mark_project_tags_stale.py
tests/: conftest.py  test_attempt_naming.py  test_boundary.py  test_brief.py  test_conflict_freeze.py  test_continuity.py  test_continuity_refresh.py  test_ffprobe.py  test_ingest.py  test_llm.py  test_llm_anthropic.py  test_load_unknown_keys.py  test_migrations.py  test_models_round_trip.py  test_premade.py  test_projects.py  test_propagation.py  test_resolver.py  test_routes_attempts.py  test_routes_clips.py  test_routes_ingest.py  test_routes_premade.py  test_routes_progress.py  test_routes_projects.py  test_routes_resolver.py  test_routes_search.py  test_routes_settings.py  test_routes_tagging.py  test_routes_take_grid.py  test_routes_transcripts.py  test_routes_video.py  test_search.py  test_settings.py  (+9 more)
(+131 files in other folders)
