[project]
name = "clipfarm"
version = "0.0.1"
description = "Personal video studio organized around raw footage as a queryable, AI-indexed library."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "watchdog>=5.0",
    "pyyaml>=6.0",
    "httpx>=0.28",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clipfarm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
filterwarnings = [
    # FastAPI/Starlette compatibility with Python 3.12 surfaces some
    # third-party deprecation noise. Filter narrowly.
    "ignore::DeprecationWarning:websockets",
]
